@@ -4,6 +4,7 @@ Fixed bug 1843273 - False - on SimplifyBooleanReturns
 Fixed bug 1848888 - Fixed false positive in UseEqualsToCompareStrings
 Fixed bug 1874313 - Documentation bugs
 Fixed bug 1855409 - False + in EmptyMethodInAbstractClassShouldBeAbstract
+Fixed bug 1888967 - Updated xpath query to detect more "empty" methods.
 Fixed other false positives in EmptyMethodInAbstractClassShouldBeAbstract
 
 New rules:
